--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -30,6 +30,8 @@ body {
   text-align: center;
   margin: 0 16px;
   border: 1px solid transparent;
+  flex-basis: auto;
+  flex-grow: 0;
   flex-shrink: 0;
 
   @media (--midphone-plus) {
@@ -60,6 +62,8 @@ body {
   flex-wrap: wrap;
   align-items: center;
   padding: 14px 12vw;
+  flex-basis: auto;
+  flex-grow: 0;
   flex-shrink: 0;
 
   @media (--midphone-plus) {
@@ -113,29 +117,45 @@ input[type="radio"]:checked + .label-webanimations { color: #E44D26; }
   display: flex;
   align-items: stretch;
   position: relative;
-  flex-basis: 100%;
   /* Solves a Firefox issue. See: http://stackoverflow.com/a/29400042/1154642 */
   min-height: 0;
+
+  flex-basis: auto;
+  flex-grow: 1;
+  flex-shrink: 1;
 }
 
 .docs-pane {
   display: none;
   background-color: #151515;
-  color: #fff;
-  font-size: 0.85em;
-  padding: 1.25em 1em 1em 1.5em;
-  overflow: scroll;
   flex-basis: 400px;
   flex-grow: 0;
   flex-shrink: 1;
+}
+
+
+.docs-pane_is-open {
+  display: flex;
+  align-items: stretch;
+}
+
+.docs-pane-content {
+  color: #fff;
+  font-size: 0.85em;
+  padding: 0 1em 1em 1.5em;
+
+  /* Provides a constant background for the more/less link */
+  margin-top: 2.5rem;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 
   @media (--tablet-plus) {
     font-size: 1em;
   }
 }
 
-.docs-pane_is-open {
-  display: block;
+.docs-pane-content h1:first-of-type {
+  margin-top: 0;
 }
 
 .docs-toggle {
@@ -168,15 +188,18 @@ input[type="radio"]:checked + .label-webanimations { color: #E44D26; }
   flex-grow: 1;
   flex-shrink: 2;
   min-width: 150px;
+  /* clips the bouncing ball, if the frame is too short */
+  overflow: hidden;
 }
 
 .source-pane {
-  overflow: scroll;
   display: flex;
   align-items: stretch;
   flex-grow: 1;
   flex-shrink: 1;
   flex-basis: 60%;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .source-pane > pre {
